fixed haiji and spacing at bottom

--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,7 @@
 body {
   font-family: "Lato", sans-serif;
   font-weight: 300;
+  padding-bottom: 50px;
 }
 
 p {
